# rust-on-nails

./: .env  .gitignore  Justfile  README.md  api.http
.devcontainer/: .bash_aliases
crates/db/: Cargo.toml  build.rs  schema.sql
crates/db/migrations/: 20250830151301_user_tables.sql
crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/protos/: api.proto
crates/grpc-api/src/: lib.rs
crates/web-assets/: Cargo.toml  build.rs  package-lock.json  package.json  tailwind.config.js
crates/web-pages/: Cargo.toml
crates/web-pages/src/: layout.rs  lib.rs  root.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: api_service.rs  config.rs  errors.rs  main.rs  root.rs  static_files.rs
