[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "http1", "tokio"] }
axum-extra = { version = "0.10.1", features = ["form"] }
db = { version = "0.1.0", path = "../db" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
] }
tokio-util = { version = "0.7.16", default-features = false }
tower-livereload = "0.9.6"
web-pages = { version = "0.1.0", path = "../web-pages" }
web-assets = { version = "0.1.0", path = "../web-assets" }
