[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "http1", "tokio"] }
axum-extra = { version = "0.10.1", features = ["form"] }
db = { version = "0.1.0", path = "../db" }
grpc-api = { version = "0.1.0", path = "../grpc-api" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "fs",
] }
tokio-util = { version = "0.7.16", default-features = false }
tower-livereload = "0.9.6"
web-pages = { version = "0.1.0", path = "../web-pages" }
web-assets = { version = "0.1.0", path = "../web-assets" }
validator = { version = "0.20.0", features = ["derive"] }
tonic = { version = "0.14.2", features = ["transport", "router", "server"] }
tower = { version = "0.5.2", features = ["make", "steer"] }
hyper = "1.7.0"
anyhow = "1.0.99"
tonic-web = "0.14.2"
tonic-reflection = "0.14.2"
